# vision-inteligente-project

./: .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json  plan.md  pyproject.toml
.VSCodeCounter/2026-05-14_20-52-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-05-14_22-23-11/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
anotated-example/: IMG_2440_registration.json
benchmarks/: zones.json
benchmarks/annotations/: try-photos-last-mold-with-without_pieces__vista_frontal__front_center_medium.json  (+6 more)
config/: inspection.json
data/: README_DATASET.md
docs/: app-workflow.md  inspection-pipeline.md  last-mold-fixture-classification.md  local_lab_testing.md  viability_assessment.md
mold_inspection/: __init__.py  anomaly_reference.py  cli.py  dataset.py  decision.py  golden_reference.py  model_suite.py  models.py  mold_segmenter.py  piece_inspector.py  yolo_export.py  yolo_runtime.py
scripts/: deploy_cloud_run.sh  eval_inspection.py  extract_manual_annotation.py  gcloud_bootstrap.sh  presence_annotate_bootstrap.py  presence_check_registry.py  preview_transfer.py
tests/: test_anomaly_reference.py  test_cli.py  test_cloud_api.py  test_config.py  test_decision.py  test_golden_reference.py  test_model_suite.py  test_piece_inspector.py  test_presence_signals.py  test_split.py
web/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
(+55 files in other folders)
