[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mold-inspection"
version = "0.1.0"
description = "Guided visual inspection pipeline for industrial molds."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
cloud = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "google-cloud-storage>=2.18",
  "google-cloud-firestore>=2.19",
  "google-cloud-aiplatform>=1.71",
  "google-genai>=1.10",
  "python-multipart>=0.0.12",
]
vision = [
  "ultralytics>=8.3",
  "pillow>=10",
  "pillow-heif>=0.20",
  "pyyaml>=6",
  "opencv-python>=4.9",
  "scikit-image>=0.23",
  "numpy>=1.26",
  "torch>=2",
  "torchvision>=0.17",
]
dev = [
  "pytest>=8",
]

[project.scripts]
mold-inspect = "mold_inspection.cli:main"
mold-inspection-api = "mold_inspection.cloud.app:run"

[tool.setuptools.packages.find]
include = ["mold_inspection*"]
